# taskgen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
action/: Dockerfile  README.md  action.yml  entrypoint.sh  harbor-check.yml  workflow-template.yml
src/swegen/: __init__.py  api.py  cli.py  config.py
src/swegen/analyze/: __init__.py  classifier.py  models.py  run.py  verdict_prompt.txt
src/swegen/create/: claude_code_runner.py  claude_code_utils.py  create.py  diff_utils.py  orchestrator.py  pr_fetcher.py  task_instruction.py  task_reference.py  task_skeleton.py
src/swegen/farm/: farm_hand.py  state.py  stream_farm.py
src/swegen/tools/: __init__.py  harbor_runner.py  validate.py  validate_utils.py
src/taskgen/: __init__.py  cli.py  config.py
src/taskgen/action/: entrypoint.sh
src/taskgen/analyze/: __init__.py  classifier.py  classify_prompt.txt  models.py  run.py
src/taskgen/create/: __init__.py  claude_code_runner.py  create.py  orchestrator.py  pr_fetcher.py  task_instruction.py  task_skeleton.py
src/taskgen/farm/: farm_hand.py  fetcher.py  stream_farm.py
src/taskgen/tools/: validate.py  validation.py
