[project]
name = "swe-gen"
version = "0.1.0"
description = "Pipeline to convert GitHub PRs into Harbor tasks"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "Rishi Desai", email = "rishi@abundant.ai"}
]
keywords = ["harbor", "terminal-bench", "swe-bench"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "PyGithub>=2.1.1",
    "GitPython>=3.1.40",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "click>=8.1.7",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "docker>=7.0.0",
    "openai>=1.43.0",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.18",
    "harbor>=0.1.34",
]

[project.urls]
Homepage = "https://github.com/abundant-ai/swe-gen"
Repository = "https://github.com/abundant-ai/swe-gen"
Issues = "https://github.com/abundant-ai/swe-gen/issues"

[project.scripts]
# Console entry to run the Typer CLI directly
swegen = "swegen.cli:app"
harbor = "harbor.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "pre-commit>=3.5.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swegen"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["swegen"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
